NXP-24354: lay out the input correctly so it doesn't overlap with the icon

--- a/nuxeo-webengine/nuxeo-webengine-invite/src/main/resources/skin/resources/css/nuxeo-user-registration-embedded.css
+++ b/nuxeo-webengine/nuxeo-webengine-invite/src/main/resources/skin/resources/css/nuxeo-user-registration-embedded.css
@@ -22,6 +22,9 @@
 }
 */
 
+input {
+  margin-left: 1.5em;
+}
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "nuxeo-user-registration";
   font-style: normal;
